Added font options to the Chatlog, and a Show All button so you can see the combined chatlog of everyone.

--- a/ui.html
+++ b/ui.html
@@ -250,6 +250,7 @@
         </div>
         <button id="clearChatlogButton">Clear</button>
         <button id="closeChatlogButton">Close</button>
+        <button id="changeFontButton">Change Font</button> <!-- New button for changing font and colors -->
     </div>
 
     <!-- Chatroom Members panel -->
